--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <div id="controls-vr">
+      <div class="control-button control-button-left control-inactive" id="vr-fullscreen">
+        Fullscreen
+      </div>
       <div class="control-button control-button-left control-inactive" id="vr-switch">
         Use VR
       </div>
