--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script src="js/OrbitControls.js"></script>
     <script src="js/VRControls.js"></script>
     <script src="js/VREffect.js"></script>
-    <script src="js/webvr-polyfill.min.js"></script>
+    <script src="js/webvr-polyfill.js"></script>
     <script src="js/ammo.js"></script>
     <script src="js/reticulum.js"></script>
     <script src="js/vr.js"></script>
