--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script src="js/VREffect.js"></script>
     <script src="js/webvr-polyfill.min.js"></script>
     <script src="js/ammo.js"></script>
-    <script src="js/reticulum.js"></script>
+    <!--<script src="js/reticulum.js"></script>-->
     <script src="js/vr.js"></script>
   </body>
 </html>
